--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ scrapy = "*"
 scrapy-sentry = "*"
 legistar = {git = "https://github.com/opencivicdata/python-legistar-scraper"}
 city-scrapers-core = {extras = ["azure"],version = "*"}
+python-dateutil = "*"
+scrapy-wayback-middleware = "*"
 
 [dev-packages]
 freezegun = "*"
