--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ city-scrapers-core = {extras = ["azure"],version = "*"}
 python-dateutil = "*"
 scrapy-wayback-middleware = "*"
 pypdf2 = "*"
+chardet = "*"
+pdfminer-six = "*"
 
 [dev-packages]
 freezegun = "*"
