Update scrapy validate in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,10 @@ jobs:
       run: |
         pytest
     - name: Validate output with scrapy
+      if: github.event_name == 'pull_request'
       run: |
-        scrapy validate
+        git checkout ${{ github.base_ref }}
+        git checkout $(git show-ref | grep pull | awk '{ print $2 }')
+        git diff-index --name-only --diff-filter=d $(git merge-base HEAD ${{ github.base_ref }}) | \
+        grep -Pio '(?<=/spiders/).*(?=\.py)' | \
+        xargs scrapy validate
