--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ twisted
 scrapy
 scrapy-sentry
 git+https://github.com/opencivicdata/python-legistar-scraper@a9cea04cb226519aaeed6bfa3a9b3ed6f44e90d3#egg=legistar
+azure-storage-blob<=2.2
 city-scrapers-core[azure]
 scrapy-wayback-middleware
 python-dateutil
