--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 env:
   CI: true
+  PIPENV_VENV_IN_PROJECT: true
   AUTOTHROTTLE_MAX_DELAY: 30.0
   AUTOTHROTTLE_START_DELAY: 1.5
   AUTOTHROTTLE_TARGET_CONCURRENCY: 3.0
@@ -23,22 +24,29 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Pipenv
+      uses: dschep/install-pipenv-action@v1
+    - name: Cache Python dependencies
+      uses: actions/cache@v1
+      with:
+        path: .venv
+        key: pip-${{ hashFiles('**/Pipfile.lock') }}
+        restore-keys: |
+          pip-
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pipenv sync --dev
     - name: Check imports with isort
       run: |
-        isort --check-only --diff || exit 1
+        pipenv run isort --check-only --diff || exit 1
     - name: Check style with yapf
       run: |
-        yapf --diff --recursive ./city_scrapers/ ./tests/ || exit 1
+        pipenv run yapf --diff --recursive ./city_scrapers/ ./tests/ || exit 1
     - name: Lint with flake8
       run: |
-        flake8
+        pipenv run flake8
     - name: Test with pytest
       run: |
-        pytest
+        pipenv run pytest
     - name: Validate output with scrapy
       if: github.event_name == 'pull_request'
       run: |
@@ -46,4 +54,4 @@ jobs:
         git checkout $(git show-ref | grep pull | awk '{ print $2 }')
         git diff-index --name-only --diff-filter=d $(git merge-base HEAD ${{ github.base_ref }}) | \
         grep -Pio '(?<=/spiders/).*(?=\.py)' | \
-        xargs scrapy validate
+        xargs pipenv run scrapy validate
