--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   CI: true
+  PIPENV_VENV_IN_PROJECT: true
   SCRAPY_SETTINGS_MODULE: city_scrapers.settings.prod
   WAYBACK_ENABLED: true
   AUTOTHROTTLE_MAX_DELAY: 30.0
@@ -26,10 +27,17 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Install Pipenv
+      uses: dschep/install-pipenv-action@v1
+    - name: Cache Python dependencies
+      uses: actions/cache@v1
+      with:
+        path: .venv
+        key: pip-${{ hashFiles('**/Pipfile.lock') }}
+        restore-keys: |
+          pip-
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pipenv sync
     - name: Run scrapers
       run: |
         export PYTHONPATH=$(pwd):$PYTHONPATH
@@ -37,4 +45,4 @@ jobs:
     - name: Combine output feeds
       run: |
         export PYTHONPATH=$(pwd):$PYTHONPATH
-        scrapy combinefeeds -s LOG_ENABLED=False
+        pipenv run scrapy combinefeeds -s LOG_ENABLED=False
