--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,9 @@ jobs:
         restore-keys: |
           pip-
     - name: Install dependencies
-      run: python3 -m pipenv sync --dev
+      run: pipenv sync --dev
+      env:
+        PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
     - name: Check imports with isort
       run: |
         pipenv run isort --check-only --diff || exit 1
