--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
 twisted = "*"
 scrapy = "*"
 scrapy-sentry = "*"
@@ -15,6 +14,7 @@ scrapy-wayback-middleware = "*"
 pypdf2 = "*"
 chardet = "*"
 pdfminer-six = "*"
+pywin32 = {version = "*", sys_platform = "== 'win32'"}
 
 [dev-packages]
 freezegun = "*"
@@ -22,3 +22,6 @@ pytest = "*"
 "flake8" = "*"
 isort = "*"
 yapf = "*"
+
+[scripts]
+style = "yapf --in-place --recursive ./city_scrapers/ ./tests/"
