Updates for deps, docs

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pywin32 = {version = "*", sys_platform = "== 'win32'"}
 [dev-packages]
 freezegun = "*"
 pytest = "*"
+pathlib2 = {version = "*", python_version = "< '3.6'"}
 "flake8" = "*"
 isort = "*"
 yapf = "*"
