--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Pipenv
       uses: dschep/install-pipenv-action@v1
+      with:
+          version: 2018.11.26
     - name: Cache Python dependencies
       uses: actions/cache@v1
       with:
