--- a/Pipfile
+++ b/Pipfile
@@ -14,12 +14,11 @@ scrapy-wayback-middleware = "*"
 pypdf2 = "*"
 chardet = "*"
 pdfminer-six = "*"
-pywin32 = {version = "*",sys_platform = "== 'win32'"}
+pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
 
 [dev-packages]
 freezegun = "*"
 pytest = "*"
-pathlib2 = {version = "*",python_version = "< '3.6'"}
 "flake8" = "*"
 isort = "*"
 yapf = "*"
