--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: Cron Build
 
 on:
   schedule:
-    - cron: '14 9 * * *'
+    - cron: "14 9 * * *"
 
 env:
   CI: true
@@ -22,30 +22,36 @@ jobs:
   crawl:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install Pipenv
-      uses: dschep/install-pipenv-action@v1
-    - name: Cache Python dependencies
-      uses: actions/cache@v1
-      with:
-        path: .venv
-        key: pip-3.7-${{ hashFiles('**/Pipfile.lock') }}
-        restore-keys: |
-          pip-3.7-
-          pip-
-    - name: Install dependencies
-      run: pipenv sync
-      env:
-        PIPENV_DEFAULT_PYTHON_VERSION: 3.7
-    - name: Run scrapers
-      run: |
-        export PYTHONPATH=$(pwd):$PYTHONPATH
-        ./.deploy.sh
-    - name: Combine output feeds
-      run: |
-        export PYTHONPATH=$(pwd):$PYTHONPATH
-        pipenv run scrapy combinefeeds -s LOG_ENABLED=False
+      - uses: actions/checkout@v1
+
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+
+      - name: Install Pipenv
+        uses: dschep/install-pipenv-action@v1
+
+      - name: Cache Python dependencies
+        uses: actions/cache@v1
+        with:
+          path: .venv
+          key: pip-3.7-${{ hashFiles('**/Pipfile.lock') }}
+          restore-keys: |
+            pip-3.7-
+            pip-
+
+      - name: Install dependencies
+        run: pipenv sync
+        env:
+          PIPENV_DEFAULT_PYTHON_VERSION: 3.7
+
+      - name: Run scrapers
+        run: |
+          export PYTHONPATH=$(pwd):$PYTHONPATH
+          ./.deploy.sh
+
+      - name: Combine output feeds
+        run: |
+          export PYTHONPATH=$(pwd):$PYTHONPATH
+          pipenv run scrapy combinefeeds -s LOG_ENABLED=False
