--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python-dateutil = "*"
 scrapy-wayback-middleware = "*"
 chardet = "*"
 pdfminer-six = "*"
+pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
 
 [dev-packages]
 freezegun = "*"
